# poc_sport_employee_benefits

./: .gitignore  Dockerfile.airflow  Dockerfile.consumer  README.md  docker-compose.airflow.yml  docker-compose.yml  init_gx.py  pyproject.toml  requirements-airflow.txt  requirements-consumer.txt
Docs/: schema_bdd.architect
airflow/dags/: pipeline_jours_bien_etre.py  pipeline_prime_sportive.py  test.py
dags/: pipeline_prime.py
docs/: dictionnaire_des_donnees.xlsx  prensentation.pptx  schema_bdd.architect
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: validate_activities_checkpoint.json  validate_employes_checkpoint.json
great_expectations/expectations/: .ge_store_backend_id  validate_activities_sportives.json  validate_employes.json
great_expectations/validation_definitions/: validate_activities_data.json  validate_employes_data.json
notebooks/: explo_donnees_rh.ipynb  my_functions.py
postgres_data/: postmaster.pid
postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841
postgres_data/base/16384/: 13398  2619
postgres_data/global/: 1260  1262  2671  pg_control
scripts/: config.py  config_kafka.py  params.py
scripts/bien_etre/: calculate_jours_bien_etre.py  consume_sport_data.py  generate_sport_data.py  gx_run_checkpoint_activities.py
scripts/great_expectations/: gx_add_asset.py  gx_add_datasource.py  gx_batch_definition.py  gx_create_suite.py  gx_create_validation.py  gx_run_validation.py
scripts/prime_sportive/: calculate_prime.py  clean_employes_data.py  get_distance_google.py  gx_run_checkpoint_employe.py  ingest_employes_data.py  ingest_employes_from_s3.py
sql/: create_schema.sql  crete_schema.sql
(+12 files in other folders)
