[tool.poetry]
name = "sport-data-solution"
version = "0.1.0"
description = ""
authors = ["Maeva Beauvillain <m.berte@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
myplotlib = "^1.5.0"
seaborn = "^0.13.2"
scipy = "^1.16.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
requests = "^2.32.4"
python-dotenv = "^1.1.0"
confluent-kafka = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
